Fixed mobile layout bugs.

--- a/templates/_main.css
+++ b/templates/_main.css
@@ -33,6 +33,7 @@ h1 {
     text-align: left;
     display: flex;
     align-items: center;
+    text-shadow: 1px 1px 1px #0f172a60;
 }
 
 h3 {
